# Math6370-labs

./: README.md  lab1.tgz  lab10_c.tgz  lab10_cxx.tgz  lab10_f90.tgz  lab11_c.tgz  lab11_cxx.tgz  lab11_f90.tgz  lab12.tgz  lab2.tgz  lab3-profiling_debugging-cxx.tgz  lab3_c.tgz  lab3_cxx.tgz  lab3_f90.tgz  lab4.tgz  lab5.tgz  lab6_c.tgz  lab6_cxx.tgz  lab6_f90.tgz  lab7_c.tgz  lab7_cxx.tgz  lab7_f90.tgz  lab8.tgz  lab9_c.tgz  lab9_cxx.tgz  lab9_f90.tgz
lab1-intro_unix/: Makefile  input.txt  main.cpp
lab10-iterative_linear/lab10-iterative_linear_c/: Makefile  driver.c  driver_mpi.c  jacobi_solve.c  jacobi_solve_mpi.c  linresid.c  linresid_mpi.c
lab10-iterative_linear/lab10-iterative_linear_cxx/: Makefile  driver.cpp  driver_mpi.cpp  input.txt  jacobi_solve.cpp  jacobi_solve_mpi.cpp  linresid.cpp  linresid_mpi.cpp
lab10-iterative_linear/lab10-iterative_linear_f90/: Makefile  driver.f90  driver_mpi.f90  get_time.f90  input.txt  jacobi_solve.f90  jacobi_solve_mpi.f90  linresid.f90  linresid_mpi.f90
lab11-manager_worker/lab11-manager_worker_c/: Makefile  chem_solver.c  chemistry_mpi.c
lab11-manager_worker/lab11-manager_worker_cxx/: Makefile  chem_solver.cpp  chemistry_mpi.cpp
lab12-kokkos/: 1_basics.cpp  2_views.cpp  3_data_transfers.cpp  4_spaces_layouts.cpp  CMakeLists.txt
lab2-intermediate_unix/: Makefile  driver.cpp  one_norm.cpp  vector_difference.cpp  vector_product.cpp  vector_sum.cpp
lab4-using_maneframe/: myjob.py
lab5-running_OpenMP/: Makefile  driver.cpp  t1.job  t8.job  vectors.cpp
lab8-running_MPI/: driver.cpp
(+75 files in other folders)
